mode for broken images where most errors wont result in visible
exceptions.  The edit-description.php example now correctly deals with
images with no previous Exif data.  A Polish translation was
added. The API documentation was updated with details about the
constrains on format and number of components for each tag.

Changes:

* Changed PelIfd::getSubIfd() to take an IFD type as argument instead
  of a PelTag.  Added PelIfd::addSubIfd().

* Added support for the GPS IFD.  This meant a couple of changes which
  break compability with version 0.8.  The problem is that the GPS
  related tags have the same value as some other tags, and so the
  function PelTag::getName(), PelTag::getTitle(), and
  PelTag::getDescription() has been changed to take an extra argument
  specifying which type of IFD the tag belongs to.

  This might change very well further in the future.

* Added PelIfd::getValidTags() which return an array of tags valid for
  the IFD in question.  Using this, PEL now reject entries in wrong
  IFDs.  For example, you cannot have a UserComment tag in a IFD for
  GPS information.

* Added a new concept of strict/non-strict mode.  The old behaviour
  was strict mode where an errors would abort the loading of an image
  because of exceptions --- in non-strict mode most exceptions will be
  trapped and broken images can still be loaded.  See the description
  in Pel.php and the answer in the FAQ for more information.

* Added support for the 0xA500 Gamma tag.

* Changed paths in example shell scripts to /usr/bin/php and explained
  in the README how to execute them.

* Updated FAQ with information about making Gettext work and the new
  strict/non-strict mode.

* Added support for Windows XP specific title, comment, author,
  keywords, and subject tags.  These tags can be edited in Windows XP
  in the Properties dialog found by right-clicking on an image.

* A number of translations in the German, French, and Spanish